9) irqbalance: update to 27.04.2016 git version.<br>
10) ralinkiappd: fix segfault in debug mode with level trace.<br>
11) ralinkiappd: add support send messages to seconf wlan module.<br>
12) freeradius: porting 3.0.11 freeradius (need for standalone EAP auth for 802.1x support need).<br>
13) freeradius: strip configs and not install not used libs for save flash size.<br>
14) init.d: add logic for radius server start.<br>
15) fastroaming: fix work 802.1x preauth (use iappd daemon for client migrations events).<br>
16) band_steering: add support read parametrs from nvram.<br>
17) uboot/kernel: add support EN25Q128 flash chip.<br>
18) init.d/goahead: add delta threshold rssi level for 5GHz band parametr for tune 5GHz band roaming.<br>
19) goahead: add band steering options.<br>
20) goahead: add contol dynamic adaptive LNA gain.<br>
21) goahead: add clamp and skip long range vga options for 7602/7612 modules (USB3/HDMI interference reduce).<br>
22) configs: disable VGA for long distance clients and clamp VGA of -4dB for all per default for 7602/7612 modules.<br>
23) kernel: ralink_wifi: fix build warnings if build with -Wall flag.<br>
24) kernel: ralink_wifi: backport some fixes to MT7620 and MT7610 stable drivers.<br>
25) kernel: ralink_wifi: fix variables type used as irqlock flags (MT7620 and MT7610 stable drivers).<br>
26) kernel: ralink_wifi: mt76x2 driver add workaround for DEASSOC PSM bug.<br>
27) kernel: ralink_wifi: print PA/LNA modes to syslog (for easy fabric control).<br>
28) kernel: usb: option: add D-Link DWM-221 B1 device id.<br>
29) kernel: usb: cdc_mbim: apply NDP to end quirk to all Huawei devices.<br>
30) kernel: mm: fix page_group_by_mobility_disabled breakage.<br>
31) kernel: ext4: fix NULL pointer dereference in ext4_mark_inode_dirty().<br>
32) kernel: net: ipv6: count in extension headers in skb->network_header.<br>
33) kernel: net: xfrm: fix crash observed during device unregistration and decryption.<br>
<br>
<br>
<br>